fix toggle background on ios

--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -164,6 +164,7 @@
 #observablehq-sidebar-toggle {
   position: fixed;
   appearance: none;
+  background: none;
   top: 0;
   left: 0;
   width: 2rem;
